[package]
name = "libborneo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsumatracrypt-rs = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
serde_yaml = "0.9.32"

# Encoding
base32 = "0.5.0"
hex = "0.4.3"
base58 = "0.2.0"

libp2p = { version = "0.54.1", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"]}

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-std = "1.10.0"  # For async execution

# Errors
thiserror = "2.0.0"

# Nonce
blake2b-pow = "0.1.1"